style/ui.less
@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100|Slabo+13px&subset=latin-ext,latin);


.sans-serif {
    font-family: 'Roboto', sans-serif;
}
.serif {
    font-family: 'Slabo 13px', serif;
}

@keyframes "sk-cubemove" {
    25% {
        transform: translateX(42px) rotate(-90deg) scale(0.5);
    }
    50% {
        transform: translateX(42px) translateY(42px) rotate(-179deg);
    }
    50.1% {
        transform: translateX(42px) translateY(42px) rotate(-180deg);
    }
    75% {
        transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
    }
    100% {
        transform: rotate(-360deg);
    }
}
.spinner {
    margin: 100px auto;
    width: 40px;
    height: 40px;
    position: relative;
}
.cube1, .cube2 {
    background-color: #2980B9;
    width: 15px;
    height: 15px;
    position: absolute;
    top: 0;
    left: 0;
  
    animation: sk-cubemove 1.8s infinite ease-in-out;
}
.cube2 {
    animation-delay: -0.9s;
}


.show {
    transition: opacity 400ms;
    opacity: 1;
}
.hide {
    transition: opacity 400ms;
    opacity: 0;
}



body {
    margin: 0;
    width: 100%;
    max-width: 100%;
    min-height: 100vh;

    display: flex;
    flex-direction: column;
    align-items: center;

    &> section#menu {
        transition: .5s, all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);

        display: flex;
        flex-direction: column;
        align-items: center;

        &> div:nth-child(1) {
            .sans-serif;
            font-size: 64px;
            margin-bottom: 45px;

            transition: 2s, all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
            // Overwritten by .home
            opacity: 0;
            margin-top: -85px;
        }

        &> div:nth-child(2) {
            display: flex;
            justify-content: center;

            &> #searchbar {
                display: flex;
                align-items: center;

                box-sizing: border-box;
                width: 750px;

                padding: 16px 32px;

                transition: .05s, all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
                box-shadow: 0 4px 16px rgba(0, 0, 0, .4);
                border-radius: 4px;

                cursor: text;

                &:focus {
                    box-shadow: 0 8px 32px rgba(0, 0, 0, .4);
                }

                &> div {
                    margin-right: 32px;

                    position: relative;
                    top: 2px;

                    opacity: .5;   
                }

                &> input {
                    width: 100%;

                    border-radius: 0 4px 4px 0;

                    border: none;
                    outline: none;

                    .sans-serif;
                    font-size: 24px;
                    font-weight: 300;

                }
            }
        }
    }

    &.home {
        &> section#menu {
            padding-top: 20vh;
            height: 175px;

            &> div:nth-child(1) {
                opacity: 1;
                margin-top: 0;
            }
        }

        &> section#content > #page-content {
            width: 750px;

            display: flex;
            flex-direction: column;
            align-items: center;
        }
    }

    &> section#content {
        width: 100%;

        &> #page-content {
            margin: 100px auto 0;

            &> .page-layout {
                &> h1 {
                    .sans-serif;
                    font-weight: 100;
                    font-size: 36px;
                }
            }

            &> .fullpage, > .page > .content {
                .page-layout;
            }

            & #site-index {
                .sans-serif;
                font-weight: 300;

                list-style-type: none;
                padding: 0;

                display: flex;
                flex-direction: column;
                align-items: center;

                &> li.active {
                    font-weight: 400;
                }

                &> li:not(:last-child) {
                    margin-bottom: 14px;
                }

                &> li > a {
                    color: #000;
                }
            }
        }
    }
}

